Change font size of some texts. Replace text to English version. Change color of empty box

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <section class="container">
-        <h1>PUZ symulacja - Zagadka 2.5</h1>
+        <h1>PUZ simulation - Puzzle 2.5</h1>
         <h2>Michał Pazio s18451</h2>
         <div class="separator"></div>
         <section class="results">
