--- a/index.html
+++ b/index.html
@@ -8,24 +8,58 @@
   </head>
   <body>
     <section class="container">
-        <h1>PUZ simulation - Puzzle 2.5</h1>
+        <h1>PUZ symulacja - Zagadka 2.5</h1>
         <h2>Michał Pazio s18451</h2>
         <div class="separator"></div>
         <section class="results">
           <div>
-            <div>Number of boxes:</div>
+            <div>Liczba bramek:</div>
             <input id="numberOfBoxesInput" value="3" type="number" onchange="changeNumberOfBoxes()"/>
           </div>
           <div>
-            <div>Won games:</div>
+            <div>Wygrane gry:</div>
             <div class="gamesNumber" id="won">0</div>
           </div>
           <div>
-            <div>Lost games:</div>
+            <div>Przegrane gry:</div>
             <div class="gamesNumber" id="lost">0</div>
           </div>
         </section>
         <div id="canvasContainer"></div>
+        <section class="puzzleContent">
+          <h2>Treść zagadki</h2>
+          <div>Są trzy jednakowe bramki. Jedna z nich zawiera wartościową nagrodę (najnowsze Ferrari), natomiast pozostałe dwie są puste (kto pamięta teleturniej Idź na całość?).</div>
+          <br />
+          <div>Zostajesz poproszony o wybranie jednej bramki i robisz to. Gospodarz teleturnieju otwiera jedną z bramek – inną niż ta, którą wybrałeś i oczywiście bez samochodu.</div>
+          <br />
+          <div>W tym momencie zostajesz poproszony o dokonanie ostatecznego wyboru: czy pozostajesz przy swoim pierwszym wyborze, czy zmieniasz zdanie i wybierasz tę drugą, nieotwartą bramkę. Niezależnie od tego, co zdecydujesz, jest to Twój ostateczny wybór i dostajesz to, co jest w tej bramce.</div>
+          <br />
+          <div>Co powinieneś zrobić?<br />
+          Pozostać przy swoim pierwotnym wyborze, czy zmienić zdanie i wybrać tę drugą bramkę?<br />
+          Jaka jest Twoja intuicja?</div>
+          <br />
+          <div><strong>Lepiej to widać, przeprowadzając analogiczne rozumowanie przy zwiększonej liczbie pustych bramek. Np. 100</strong></div>
+          <br />
+          <h2>Legenda</h2>
+          <div class="legend">
+            <div class="legendItem">
+              <div class="box coveredBox"></div>
+              <span> - zakryta bramka</span>
+            </div>
+            <div class="legendItem">
+              <div class="box uncoveredBox"></div>
+              <span> - odkryta bramka</span>
+            </div>
+            <div class="legendItem">
+              <div class="box winningBox"></div>
+              <span> - wygrywająca bramka</span>
+            </div>
+            <div class="legendItem">
+              <div class="box losingBox"></div>
+              <span> - przegrywająca bramka</span>
+            </div>
+          </div>
+        </section>
     </section>
     <script src="main.js"></script>
   </body>
