--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
           </div>
         </section>
         <div id="canvasContainer"></div>
+        <div style="padding-bottom: 256px;"></div>
     </section>
     <script src="main.js"></script>
   </body>
